<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".contact">

    <TextView
        android:id="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/contact_us"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/conp1"
        android:layout_width="wrap_content"
        android:layout_below="@id/con"

        android:layout_height="wrap_content"

        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:padding="10dp"
        android:text="@string/team_name_hack_dev"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/conp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="6dp"
        android:layout_below="@+id/conp1"
        android:padding="10dp"
        android:text="@string/jugalnerist_gmail_com_rikeshyada2132_gmail_com"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/conp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/conp2"
        android:padding="10dp"
        android:text="@string/ab"
        android:textColor="@color/black"
        android:textSize="19sp" />




</RelativeLayout>