<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/but11"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:id="@+id/firstll"
    android:gravity="center"
    android:background="@drawable/peo3"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/waste_management"
        android:textColor="@color/white"
        android:textSize="39sp" />
    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ek Kadam Swachhata Ki Or"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="44dp"

        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/govern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:background="@drawable/but7"

        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="20dp"

        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:layout_below="@id/firstll"
        android:padding="10dp"
        android:text="@string/government"
        android:textSize="19sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/citizen"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:background="@drawable/but7"
android:layout_below="@id/govern"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"

        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/citizen"
        android:textSize="19sp" />


</RelativeLayout>
