<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/but2"
    android:id="@+id/drawer"
    tools:context=".home_citizen">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
android:background="@drawable/but66"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="58dp"

                />
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/chr1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chb1"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/but7"
                android:textSize="17sp"
                android:padding="15dp"

                android:text="@string/problem_statement" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chb1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/but7"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"

                android:padding="15dp"
                android:text="@string/scheme" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chb2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/but7"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:padding="15dp"
                android:text="@string/promote_ideas" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chb3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/but7"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:padding="15dp"
                android:text="@string/garbage_management_team" />

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:id="@+id/nav"
        android:layout_height="match_parent"
app:menu="@menu/menu1"
        app:headerLayout="@layout/activity_header2"

        android:layout_gravity="start"

        />

</androidx.drawerlayout.widget.DrawerLayout>
